# modbus-cpp

./: .gitignore  .gitmodules  Address_8h.html  BitDatabase_8h.html  Building.html  CMakeLists.txt  ConnectionException_8h.html  Doxyfile  Doxyfile-mcss  Example.html  ExceptionType_8h.html  Expected_8h.html  IChannel_8h.html  IClientChannel_8h.html  IClientSession_8h.html  IDatabase_8h.html  IException_8h.html  IModbusManager_8h.html  IScheduledRequest_8h.html  IServerChannel_8h.html  IServerSession_8h.html  ISessionResponseHandler_8h.html  ISession_8h.html  ITimer_8h.html  InMemoryDatabase_8h.html  Ipv4Endpoint_8h.html  LICENSE.md  LoggerFactory_8h.html  LoggingLevel_8h.html  MalformedModbusRequestException_8h.html  MalformedModbusResponseException_8h.html  ModbusException_8h.html  README.md  ReadCoilsRequest_8h.html  ReadCoilsResponse_8h.html  ReadDiscreteInputsRequest_8h.html  ReadDiscreteInputsResponse_8h.html  ReadHoldingRegistersRequest_8h.html  ReadHoldingRegistersResponse_8h.html  ReadInputRegistersRequest_8h.html  (+82 more)
lib/: CMakeLists.txt
lib/include/modbus/: Expected.h  IChannel.h  IModbusManager.h  ISchedule.h  ISession.h  ISessionResponseHandler.h  ITimer.h  Ipv4Endpoint.h  ModbusManager.h  ResponseHandler.h  ScheduleFactory.h  TimeoutException.h  Typedefs.h  UnitIdentifier.h
lib/include/modbus/channel/: IChannel.h  Ipv4Endpoint.h  UnitIdentifier.h
lib/include/modbus/client/: IClientChannel.h  IClientSession.h  IScheduledRequest.h  ResponseHandler.h
lib/include/modbus/exceptions/: ConnectionException.h  IException.h  MalformedModbusRequestException.h  MalformedModbusResponseException.h  ModbusException.h  TimeoutException.h
lib/include/modbus/logging/: ILoggerSink.h  LogLevel.h  LoggerFactory.h  LoggingLevel.h
lib/include/modbus/messages/: Address.h  Exception.h  ExceptionType.h  IRequest.h  IResponse.h  ReadCoilsRequest.h  ReadCoilsResponse.h  ReadDiscreteInputsRequest.h  ReadDiscreteInputsResponse.h  ReadHoldingRegistersRequest.h  ReadHoldingRegistersResponse.h  ReadInputRegistersRequest.h  ReadInputRegistersResponse.h  ReadRegistersRequest.h  ReadRegistersResponse.h  RegisterValue.h  SingleBitValue.h  WriteMultipleCoilsRequest.h  WriteMultipleCoilsResponse.h  WriteMultipleRegistersRequest.h  WriteMultipleRegistersResponse.h  WriteSingleCoilRequest.h  WriteSingleCoilResponse.h  WriteSingleRegisterRequest.h  WriteSingleRegisterResponse.h
lib/include/modbus/server/: IServerChannel.h  IServerSession.h
lib/include/modbus/session/: ISchedule.h  IScheduledRequest.h  ISession.h  ISessionResponseHandler.h  ScheduleFactory.h
lib/src/: IConnectionListener.h  IModbusManager.cpp  ITcpConnection.h  Ipv4Endpoint.cpp  ModbusManager.cpp  ModbusManagerImpl.cpp  ModbusManagerImpl.h  PeriodicSchedule.cpp  PeriodicSchedule.h  PrivateHeader.cpp  PrivateHeader.h  ScheduleFactory.cpp  TimerWrapper.cpp  TimerWrapper.h  TransactionIdentifier.cpp  TransactionIdentifier.h  UnitIdentifier.cpp
lib/src/channel/: AsioTcpConnection.cpp  AsioTcpConnection.h  ChannelTcp.cpp  ChannelTcp.h  ConnectionListener.h  IChannelImpl.h  IConnectionListener.h  IMbapSink.h  ITcpConnection.h  Ipv4Endpoint.cpp  MbapMessage.cpp  MbapMessage.h  MbapParser.cpp  MbapParser.h  PendingRequest.h  TransactionIdentifier.cpp  TransactionIdentifier.h  UnitIdentifier.cpp
lib/src/client/channel/: AsioClientTcpConnection.cpp  AsioClientTcpConnection.h  ClientChannelTcp.cpp  ClientChannelTcp.h  IClientChannelImpl.h  IClientTcpConnection.h  IConnectionListener.h  (+1 more)
lib/src/logging/: CustomLoggerSink.cpp  CustomLoggerSink.h  Logger.h  LoggerFactory.cpp  LoggingLevelConversion.h
lib/src/messages/: Exception.cpp  ExceptionResponse.cpp  ExceptionResponse.h  ExceptionType.cpp  IMessage.cpp  IMessage.h  IRequest.h  IResponse.cpp  IResponse.h  ReadBitsRequestImpl.cpp  ReadBitsRequestImpl.h  ReadBitsResponseImpl.cpp  ReadBitsResponseImpl.h  ReadCoilsRequestImpl.h  ReadCoilsResponseImpl.h  ReadDiscreteInputsRequestImpl.h  ReadDiscreteInputsResponseImpl.h  ReadHoldingRegistersRequest.cpp  ReadHoldingRegistersRequestImpl.h  ReadHoldingRegistersResponse.cpp  ReadHoldingRegistersResponseImpl.h  ReadInputRegistersRequest.cpp  ReadInputRegistersRequestImpl.h  ReadInputRegistersResponse.cpp  ReadInputRegistersResponseImpl.h  ReadRegistersRequest.cpp  ReadRegistersRequestImpl.cpp  ReadRegistersRequestImpl.h  ReadRegistersResponse.cpp  ReadRegistersResponseImpl.cpp  ReadRegistersResponseImpl.h  WriteMultipleCoilsRequestImpl.cpp  WriteMultipleCoilsRequestImpl.h  WriteMultipleCoilsResponseImpl.cpp  WriteMultipleCoilsResponseImpl.h  WriteMultipleRegistersRequest.cpp  WriteMultipleRegistersRequestImpl.cpp  WriteMultipleRegistersRequestImpl.h  WriteMultipleRegistersResponse.cpp  WriteMultipleRegistersResponseImpl.cpp  (+11 more)
lib/src/session/: IScheduledRequest.h  PeriodicSchedule.h  ScheduleFactory.cpp  ScheduledRequest.h  ScheduledRequest.hpp  SessionImpl.cpp  SessionImpl.h
lib/tests/: CMakeLists.txt  Ipv4EndpointTest.cpp  PeriodicScheduleTest.cpp  UnitIdentifierTest.cpp  test.cpp
lib/tests/channel/: AsioTcpConnectionTest.cpp  ChannelTcpTest.cpp  MbapMessageTest.cpp  MbapParserTest.cpp  TransactionIdentifierTest.cpp  UnitIdentifierTest.cpp
lib/tests/messages/: IResponseTest.cpp  ReadHoldingRegistersRequestTest.cpp  ReadHoldingRegistersResponseTest.cpp  ReadInputRegistersRequestTest.cpp  ReadInputRegistersResponseTest.cpp  WriteMultipleRegistersRequestTest.cpp  WriteSingleRegisterRequestTest.cpp
lib/tests/mocks/: AsioTcpConnectionWrapper.h  ConnectionListenerMock.cpp  ConnectionListenerMock.h  ExecutorMock.cpp  ExecutorMock.h  IResponseMock.cpp  IResponseMock.h  ISessionMock.cpp  ISessionMock.h  MbapSinkMock.cpp  MbapSinkMock.h  RequestMock.cpp  RequestMock.h  TcpConnectionMock.cpp  TcpConnectionMock.h  TestServer.cpp  TestServer.h  TimerMock.cpp  TimerMock.h
lib/tests/perf/: CMakeLists.txt  ServerSession.cpp  ServerSession.h  main.cpp
lib/tests/session/: ScheduledRequestTest.cpp  SessionImplTest.cpp
lib/tests/unit/: CMakeLists.txt  Ipv4EndpointTest.cpp  TransactionIdentifierTest.cpp  UnitIdentifierTest.cpp  main.cpp
(+130 files in other folders)
